# swri-ros-pkg

./: MainPage.md  ProjectHome.md  stack.xml
SIA20D_Mesh_arm_navigation/: manifest.xml
branches/byte_swap_dev/freetail/freetail_object_manipulation/: CMakeLists.txt
freetail/cph_recognition/: CMakeLists.txt  mainpage.dox  manifest.xml
freetail/cph_recognition/data/: segment_0.pcd
freetail/cph_recognition/src/: cph_recognition.cpp
freetail/vfh_recognition/: CMakeLists.txt  Makefile  training_data.list
freetail/vfh_recognition/config/: vfh_recognition_config_params.yaml
freetail/vfh_recognition/data/: woodblock_1.pcd  woodblock_4_vfh.pcd
freetail/vfh_recognition/include/vfh_recognition/: SupportClasses.h
freetail/vfh_recognition/launch/: vfh_recognition.launch
freetail/vfh_recognition/src/: euclidean_segmentation.h  euclidean_segmentation_rgba.h  template_alignment.h  test_client.cpp  test_client_rgba.cpp  vfh_recognition_configurable.cpp  vfh_recognition_node.cpp
freetail/vfh_recognition/src/vfh_recognition/msg/: _Recognize_msg.py
freetail/vfh_recognition/src/vfh_recognition/srv/: __init__.py
graveyard/industrial_experimental/object_manipulation_tools/: CMakeLists.txt
graveyard/industrial_experimental/object_manipulation_tools/src/manipulation_utils/: GraspSequenceValidator.cpp
graveyard/industrial_experimental/object_manipulation_tools/src/nodes/: joint_trajectory_action.cpp  simulated_robot_controller_node.cpp
industrial/simple_message/: CMakeLists.txt  manifest.xml
industrial/simple_message/include/: byte_array.h  joint_message.h  joint_position.h  log_wrapper.h  message_handler.h  message_manager.h  ping_handler.h  ping_message.h  shared_types.h  simple_message.h  simple_socket.h  smpl_msg_connection.h  tcp_client.h  typed_message.h  udp_socket.h
industrial/simple_message/include/simple_message/: joint_position.h  joint_traj_pt.h  simple_message.h
industrial/simple_message/include/simple_message/messages/: joint_message.h  joint_traj_pt_message.h
industrial/simple_message/include/simple_message/socket/: simple_socket.h
industrial/simple_message/include/socket/: simple_socket.h  tcp_client.h  tcp_socket.h  udp_client.h  udp_server.h  udp_socket.h
industrial/simple_message/src/: byte_array.cpp  joint_data.cpp  joint_message.cpp  joint_position.cpp  message_handler.cpp  message_manager.cpp  ping_handler.cpp  ping_message.cpp  simple_message.cpp  smpl_msg_connection.cpp  tcp_client.cpp  tcp_socket.cpp  udp_socket.cpp
industrial/simple_message/src/messages/: joint_message.cpp
industrial/simple_message/src/socket/: simple_socket.cpp  tcp_client.cpp  tcp_server.cpp  tcp_socket.cpp  udp_client.cpp  udp_server.cpp  udp_socket.cpp
industrial/simple_message/test/: utest.cpp
industrial_experimental/industrial_experimental/: CMakeLists.txt  package.xml
industrial_experimental/industrial_trajectory_filters/: CMakeLists.txt  manifest.xml  package.xml  planning_request_adapters_plugin_description.xml
industrial_experimental/industrial_trajectory_filters/include/industrial_trajectory_filters/: filter_base.h  uniform_sample_filter.h
industrial_experimental/industrial_trajectory_filters/src/: n_point_filter.cpp
mantis/mantis_object_manipulation/: CMakeLists.txt  manifest.xml
mantis/mantis_object_manipulation/config/: mantis_pick_place_parameters.yaml  mantis_sia20d_navigation_parameters.yaml  mantis_sia20d_sphere_picking_parameters.yaml  mantis_ur5_sphere_picking_parameters.yaml  mantis_zone_selector_parameters.yaml  pick_place_zone_parameters.yaml  viz_test_place_selector.vcg
mantis/mantis_object_manipulation/include/arm_navigators/: RobotPickPlaceNavigator.h
mantis/mantis_object_manipulation/include/mantis_object_manipulation/arm_navigators/: AutomatedPickerRobotNavigator.h  SingulateClutterArmNavigator.h  SortClutterArmNavigator.h  SpherePickingRobotNavigator.h
mantis/mantis_object_manipulation/launch/: launch_concurrent_arm_move_supervisor.launch  launch_dual_arm_supervisor.launch  start_sia20d_automated_manipulation.launch  start_sia20d_sphere_pickplace.launch  start_ur5_automated_sorting.launch  start_ur5_sphere_pickplace.launch  test_pick_place_zone_selector.launch
mantis/mantis_object_manipulation/src/arm_navigators/: AutomatedPickerRobotNavigator.cpp  RobotPickPlaceNavigator.cpp  SortClutterArmNavigator.cpp  SpherePickingRobotNavigator.cpp
mantis/mantis_object_manipulation/src/nodes/: arm_move_supervisor_node.cpp  automated_sorting_arm_node.cpp  pick_place_demo_node.cpp  recognition_pick_place_node.cpp  sphere_picking_demo_node.cpp
mantis/mantis_object_manipulation/src/test/: test_zone_selector_node.cpp
mantis/mantis_object_manipulation/src/zone_selection/: PickPlaceZoneSelector.cpp
mantis/mantis_object_manipulation/srv/: ArmHandshaking.srv
motoman/: CMakeLists.txt
motoman/cfg/: sia20d_mesh.xml
motoman/include/: definitions.h  joint_relay_handler.h  joint_trajectory_handler.h  motosocket.h
motoman/include/motoman/: trajectory_job.h
motoman/motoplus/: READ_ME.TXT  joint_motion_handler.cpp  ros_conversion.h
motoman/motoplus/motoros_lib/: motoros_lib.mpProj
motoman/motoplus/motoros_lib/output/: joint_motion_handler.h  motoros_lib.mpLib
motoman/src/: joint_relay_handler.cpp  joint_trajectory_handler.cpp  motion_download_interface.cpp  robot_state.cpp  ros_conversion.cpp  trajectory_job.cpp
tags/industrial_robot_client_dev/industrial_experimental/industrial_robot_client/: CMakeLists.txt  cmake_install.cmake  manifest.xml
trunk/mantis/mantis_object_manipulation/: CMakeLists.txt  manifest.xml
trunk/mantis/mantis_object_manipulation/config/: mantis_automated_manipulation_parameters.yaml  mantis_pick_place_parameters.yaml  mantis_sia20d_sphere_picking_parameters.yaml  mantis_ur5_sphere_picking_parameters.yaml  mantis_zone_selector_parameters.yaml  pick_place_zone_parameters.yaml
trunk/mantis/mantis_object_manipulation/launch/: start_ur5_sphere_pick_place.launch  start_ur5_sphere_pickplace.launch  test_pick_place_zone_selector.launch
trunk/mantis/mantis_object_manipulation/srv/: ArmHandshaking.srv
(+1687 files in other folders)
